<resources>
    <string name="app_name">Giftrip</string>
    <string name="home">홈</string>
    <string name="finisher">완주자</string>
    <string name="present">경품</string>
    <string name="notification">알림</string>
    <string name="setting">설정</string>
    <string name="nfc_text">nfc 인식</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watched_map">지도 보기</string>
    <string name="nfc_data">NFC 카드를 휴대전화 뒷면에 가까이 대세요</string>
    <string name="spotimage">SpotImage</string>
    <string name="feedimage">feedImage</string>
</resources>