<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />

    <item
        android:id="@+id/navigation_finisher"
        android:title="@string/finisher"
        android:icon="@drawable/ic_finisher"/>

    <item
        android:id="@+id/navigation_gift"
        android:title="@string/present"
        android:icon="@drawable/ic_gift"/>

    <item
        android:id="@+id/navigation_notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification"/>

    <item
        android:id="@+id/navigation_setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings"/>



</menu>